implimenting ai to recruiter